--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "gulp-util": "*",
     "hbsfy": "~1.3.1",
     "stringify": "^3.2.0",
+    "three": "^0.84.0",
     "three-shader-fxaa": "^5.0.2",
     "vinyl-buffer": "*",
     "vinyl-source-stream": "*",
